# face_recognition

./: .gitignore  README.md  install_linux.sh  install_linux1.sh  install_linux2.sh  install_linux3.sh  install_mac.sh
RPi_dlib_py_sample/: webcam_sample.py
cv_cpp/: CMakeLists.txt  image.cpp  video.cpp  webcam.cpp
cv_py/: aaa.py  image.py  video.py  webcam.py
dlib_cpp/: CMakeLists.txt  image_dlib.cpp  video_dlib.cpp  webcam_dlib.cpp
dlib_py/: image_dlib.py  video_dlib.py  webcam_dlib.py
